syntax = "proto3";

service Api {
  rpc getUploadUrl (UploadUrlReq) returns (UploadUrlRes) {}
  rpc createProcessingJob (CreateProcessingReq) returns (CreateProcessingRes) {}
  rpc getProcessingJob (GetProcessingReq) returns (GetProcessingRes) {}
}

message UploadUrlReq {}

message UploadUrlRes {
  string url = 1;
  string filename = 2;
}

message CreateProcessingReq {
  string filename = 1;
}

message CreateProcessingRes {
  ProcessingJob job = 1;
}

message GetProcessingReq {
  string jobId = 1;
}

message GetProcessingRes {
  ProcessingJob job = 1;
}

message ProcessingJob {
  string id = 1;
  string fileKey = 2;
  string createdAt = 3;
  string state = 4;
}
